cabal-version:   3.4
name:            hession
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          unorsk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    SessionLib
    SNodeApi

  build-depends:
    , base                ^>=4.20.0.0
    , libsodium-bindings

  hs-source-dirs:   src
  default-language: GHC2024

executable hession
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base     ^>=4.20.0.0
    , hession

  hs-source-dirs:   app
  default-language: GHC2024

test-suite hession-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base     ^>=4.20.0.0
    , hession
